[package]
name = "easy-io"
version = "0.1.0"
authors = ["Tamas Kis"]
edition = "2024"
description = "Easy interfaces for file i/o."
documentation = "https://docs.rs/easy-io"
repository = "https://github.com/tamaskis/easy-io"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dependencies]

[dev-dependencies]