[package]
name = "file-io"
version = "0.1.2"
authors = ["Tamas Kis"]
edition = "2024"
description = "Easy interfaces for file i/o."
documentation = "https://docs.rs/file-io"
repository = "https://github.com/tamaskis/file-io"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dependencies]
walkdir = "2.5.0"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.20.0"
